--- a/FinalProject/Views/Shared/_Layout.cshtml
+++ b/FinalProject/Views/Shared/_Layout.cshtml
@@ -23,9 +23,9 @@
             <div class="navbar-collapse collapse navigation">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Top-Tools", "Index", "DevelopmentTool")</li>
-                    <li>@Html.ActionLink("Top-Companies", "Index", "Company")</li>
-                    <li>@Html.ActionLink("Buy now", "Index", "Buy")</li>
+                    <li>@Html.ActionLink("Tools", "Index", "DevelopmentTool")</li>
+                    <li>@Html.ActionLink("Companies", "Index", "Company")</li>
+                    <li>@Html.ActionLink("Books", "Index", "Buy")</li>
                     @if (User.IsInRole("Admin"))
                     {
                         <li>@Html.ActionLink("Statistics", "Index", "Statistics")</li>
@@ -33,7 +33,7 @@
                     <li style="max-width: 247px; margin-left:10px; margin-right: 10px;">
                         @using (Html.BeginForm("Index", "Search", FormMethod.Get, new { @class = "search-form input-group" }))
                         {
-                            <input type="text" class="form-control" placeholder="Search" name="searchRequest" id="searchRequest" style="align-self: center;">
+                            <input type="text" class="form-control" placeholder="Search" name="searchRequest" id="searchRequest" style="align-self: center; margin-top: 3px;">
                             <div class="input-group-btn">
                                 <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                             </div>
